SOLR-18188: Tests, switch from Apache to Jetty HttpClient (#4266)
Switches many tests that were using Apache HttpClient directly to instead use Jetty HttpClient (or in some cases a plain SolrClient given we can do a lot with them). 
SimplePrinciple was made a record and used in places where an Apache variant was used.

Co-authored-by: Claude Opus 4.6 <noreply@anthropic.com>